--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: Juan Calatayud Palmer
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: Web Developer
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://avatars1.githubusercontent.com/u/25986907?v=3&u=c2cc16825358d28adff8962800636215db2acb79&s=400
 
 #
 # Flags below are optional
